Modified Blog URL

--- a/en/index.html
+++ b/en/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="span4">
 			<a href="http://twitter.com/progreso8"><img src="../images/Twitter.png" alt="Twitter"></a>
-			<a href="http://blog.progreso8.com"><img src="../images/Feed.png" alt="Blog"></a>
+			<a href="http://blog.progreso8.org"><img src="../images/Feed.png" alt="Blog"></a>
 			<!--a href="#"><img src="../images/Share-This.png" alt="HOME"></a-->
 			</div>
 		</div>
