--- a/gl/index.html
+++ b/gl/index.html
@@ -212,7 +212,7 @@
 ================================================== -->
 	<div class="container call-to-action">
 		<h1>¡XA <br class="visible-phone"> ESTAMOS <br class="visible-phone"> AQUI! </h1>
-		<a href="mailto:progresoocho@gmail.com" class="scroll-top">¡ESCRIBENOS!</a>
+		<a href="mailto:progresoocho@gmail.org" class="scroll-top">¡ESCRIBENOS!</a>
 	</div>
 	<div class="end_page">
 		<img src="../images/beer.png" alt="logo">
