Fixed galician texts

--- a/gl/index.html
+++ b/gl/index.html
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 	<a href="#feature-set" class="down-tab hidden-phone" name="feature-set">
-		LEARN MORE <i class="arrow arrow-down">&nbsp;</i>
+		LEER MAIS <i class="arrow arrow-down">&nbsp;</i>
 	</a>
 	<div class="full-width-features feature-1">
 		<div class="container">
