Arreglado logo en gl y en

--- a/en/index.html
+++ b/en/index.html
@@ -73,7 +73,7 @@
 						<br class="hidden-phone">
 						<h4>Progreso8 is a new form to do #coworking</h4>
 						<h4>Visit us!, you'll be welcome.</h4>
-						<img src="images/logo.png" />						
+						<img src="../images/logo.png" />						
 					</div>
 					
 					<div class="header-main-phone visible-phone">
