--- a/gl/index.html
+++ b/gl/index.html
@@ -73,7 +73,7 @@
 						<br class="hidden-phone">
 						<h4>Progreso8 é unha nova forma de facer #coworking</h4>
 						<h4>Visítanos serás benvido.</h4>
-						<img src="images/logo.png" />
+						<img src="../images/logo.png" />
 					</div>
 					
 					<div class="header-main-phone visible-phone">
